--- a/gemini.dbaccess.postgresql.feature/pom.xml
+++ b/gemini.dbaccess.postgresql.feature/pom.xml
@@ -23,7 +23,7 @@
     <relativePath>../mvn_parent</relativePath>
   </parent>
 
-  <artifactId>org.eclipse.gemini.dbaccess.postgresql</artifactId>
+  <artifactId>org.eclipse.gemini.dbaccess.postgresql.feature</artifactId>
   <version>1.1.0-SNAPSHOT</version>
   <packaging>eclipse-feature</packaging>
 </project>
